# mc_go1

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  Go1.cpp  Go1.h  Go1.in.cpp  config.in.h
tests/: CMakeLists.txt  loader.in.cpp  test_module.cpp  test_module.in.h
